; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_hpet.c_hpet_time_div.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_hpet.c_hpet_time_div.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpets = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.hpets*, i64)* @hpet_time_div to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @hpet_time_div(%struct.hpets* %0, i64 %1) #0 {
  %3 = alloca %struct.hpets*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.hpets* %0, %struct.hpets** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.hpets*, %struct.hpets** %3, align 8
  %7 = getelementptr inbounds %struct.hpets, %struct.hpets* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* %4, align 8
  %10 = lshr i64 %9, 1
  %11 = add i64 %8, %10
  store i64 %11, i64* %5, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @do_div(i64 %12, i64 %13)
  %15 = load i64, i64* %5, align 8
  ret i64 %15
}

declare dso_local i32 @do_div(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
